Integrate Java 21+ virtual threads for enhanced concurrency and memory efficiency in Kafka consumer. Update application configuration for lazy initialization to improve startup time. Add comprehensive JVM tuning options for production environments, including ZGC and G1GC settings. Remove deprecated `DynamoDBService` in favor of `DynamoDBBatchService` for optimized batch writes. Enhance unit tests to utilize virtual thread scheduler for improved testing accuracy.